@@ -1,3 +1,14 @@
+2004-03-13  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web.erl: New interface for ACLs editing
+
+	* src/web/ejabberd_http_poll.erl: Fixed "Content-Type" header,
+	"Set-Cookie" is included only in first response in session, added
+	missed behaviour definition
+
+	* src/web/ejabberd_http.erl: "Content-Type" header now can be
+	changed
+
 2004-03-12  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/ejabberd_web.erl: Experiments with web-interface
